k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: django-service
  namespace: django

spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
